--- a/c-heap/c-heap.vcxproj
+++ b/c-heap/c-heap.vcxproj
@@ -22,6 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{B74FE407-6156-40D8-97B9-B6FE35B2B046}</ProjectGuid>
     <RootNamespace>cheap</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
